# Applied-Maths-Lab-2

./: CMakeLists.txt  ConjugateGradient.cpp  ConstantStep.cpp  Fibonacci.cpp  FractionizeStep.cpp  Functions.cpp  GoldenRatio.cpp  GradientDescent.cpp  Gradient_descent.cpp  MinMethod.cpp  ParabolaWithTwoArguments.cpp  Plotter.py  Steps.cpp  TwoDimensionalFunction.cpp  TwoDimensionalFunction.h  main.cpp
h/: ConjugateGradient.h  Functions.h  GradientDescent.h  Gradient_descent.h  MinMethod.h  ParabolaWithTwoArguments.h  Steps.h
output-gradient/: ConjugateGradientDescent  ConstantStepDescent  FractionizeStepDescent  GRStepDescent
